deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: jultelegrafen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - image: ghcr.io/middlewaregruppen/jultelegrafen:v0.0.10
          imagePullPolicy: Always
          name: jultelegrafen
          args:
            - "--db-path=/data/messages.json"
            - "--pop-max-wait=2m"
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: data
