deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: jultelegrafen
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
